--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,24 @@ head,body {
     background-color: white;
 }
 
-
-img {
-    max-width: 100%;
-    height: auto;
+header .navbar{
+    background-color: #2e2e2e;
 }
 
-a:hover {
-    color: #db4a39;
+            /* Полоса под меню */
+
+/* header .nav-item a::after{
+    content: "";
+    display: block;
+
+    background-color: #db4a39;
+    width: 100%;
+    height: 2px;
+       
+    transform: scale(0);
+    transition: 1s;
 }
+
+header .nav-item a:hover::after {
+    transform: scale(1);
+}  */
