--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,27 @@ head,body {
     background-color: white;
 }
 
-header .navbar{
-    background-color: #2e2e2e;
+ul.nav  .nav-item {
+    color: black;
 }
 
-            /* Полоса под меню */
+ul.nav .nav-link {
+    text-transform: uppercase;
+    color: black;
+}
 
-/* header .nav-item a::after{
+ul.nav .nav-item a::after {
     content: "";
     display: block;
 
-    background-color: #db4a39;
+    background-color: #0099ff;
     width: 100%;
-    height: 2px;
+    height: 3px;
        
     transform: scale(0);
-    transition: 1s;
+    transition: .4s;
 }
 
-header .nav-item a:hover::after {
+ul.nav .nav-item a:hover::after {
     transform: scale(1);
-}  */
+}
